chore: add swag annotations to receiver handlers
